--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
+    "jquery": "^3.7.1",
+    "jQuery": "^1.7.4",
+    "popper.js": "^1.16.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
